force-app/main/default/objects/Laptop__c/fields/Laptop_Model__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Model__c</fullName>
    <label>Laptop Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>