force-app/main/default/objects/Laptop__c/fields/Warranty_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Warranty_ExpirationDate__c</fullName>
    <label>Warranty ExpirationDate</label>
    <type>Date</type>
</CustomField>