force-app/main/default/objects/Laptop__c/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <description>This formula returns TRUE if the warranty is still valid, and FALSE if it has expired.</description>
    <formula>Warranty_ExpirationDate__c &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Status</label>
    <type>Checkbox</type>
</CustomField>