force-app/main/default/objects/Laptop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Laptop_Model__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Warranty_ExpirationDate__c</columns>
    <columns>Warranty_Status__c</columns>
    <columns>Defect_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>